--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/register/page.jsx", "app/api/auth/[...nextauth]/route.jsx", "app/register/page.jsx", "components/UserInfo.jsx", "components/RegisterForm.jsx", "components/LoginForm.jsx", "components/LoginForm.jsx", "components/RegisterForm.jsx", "app/api/auth/[...nextauth]/route.js", "app/Providers.js", "app/page.jsx", "app/api/register/route.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/register/page.jsx", "app/api/auth/[...nextauth]/route.jsx", "app/register/page.jsx", "components/UserInfo.jsx", "components/RegisterForm.jsx", "components/LoginForm.jsx", "components/LoginForm.jsx", "components/RegisterForm.jsx", "app/api/auth/[...nextauth]/route.js", "app/Providers.js", "app/page.jsx", "app/api/register/route.js", "app/api/userExists/route.js", "models/user.js", "lib/mongodb.js", "app/dashboard/page.jsx"],
   "exclude": ["node_modules"]
 }
